--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,7 @@
-* {
-  padding: 0;
-  margin: 0;
+li {
+  list-style-type: none;
 }
 
-.center {
-  margin: 26px;
-}
-
-.wrapperForChats {
-  display: flex;
+a {
+  text-decoration: none;
 }
